# mathsnip

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
mathsnip/: __init__.py  app.py  appicon.py  capture.py  cli.py  clipboard.py  config.py  convert.py  history.py  ocr.py  preprocess.py  result_window.py  settings_dialog.py  snip_overlay.py
