[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathsnip"
version = "0.1.0"
description = "Open-source, self-hosted Mathpix Snip clone for macOS: screen-snip math to LaTeX."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Himanshu" }]
keywords = ["latex", "ocr", "mathpix", "math", "pix2text", "macos"]
classifiers = [
    "Environment :: MacOS X",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "PyQt6>=6.6",
    "PyQt6-WebEngine>=6.6",
    # Matched torch-2.4 era set (see requirements.txt for the full rationale).
    # Apple Silicon only — torch 2.4 has no macOS Intel wheels.
    "torch>=2.4,<2.5",
    "torchvision>=0.19,<0.20",
    "transformers>=4.44,<4.47",
    "safetensors>=0.4.3,<0.5",
    "optimum>=1.20,<2",
    "onnxruntime<1.20",   # >=1.20 references torch.int4 (needs torch 2.6+)
    "pix2text>=1.1.4",
    "Pillow>=10.0",
    "latex2mathml>=3.77",
    "pynput>=1.7",
    "requests>=2.31",
]

[project.scripts]
mathsnip = "mathsnip.app:main"

[project.urls]
Homepage = "https://github.com/bootstrapM/mathsnip"
Issues = "https://github.com/bootstrapM/mathsnip/issues"

[tool.setuptools]
packages = ["mathsnip"]
